# solomon-x

./: solomon_enhanced.html
solomon-x/: .gitignore
solomon-x - Copy/: Cargo.toml
solomon-x - Copy/crates/auth/: handshake.rs
solomon-x - Copy/solomon x/solomon-x/trust/: mentor_gate.py
solomon-x - Copy/solomon x/solomon-x/trust/policies/: default.rego
solomon-x/python/memory/: embedder.py  store.py
solomon-x/python/memory/tests/: test_daemon.py
solomon-x/ui/js/: phase3.js  solomon-ws.js
solomon_x_architecture - Copy/: SOLOMON_X_AVATAR_VOICE_ENHANCEMENTS.md
solomon_x_architecture - Copy (3)/solomon-x/crates/solomon-daemon/: Cargo.toml
solomon_x_architecture - Copy (3)/solomon-x/python/utils/: phi3_loader.py
solomon_x_architecture - Copy (3)/solomon-x/solomon x/solomon_x_architecture - Copy/: SOLOMON_X_MASTER_PLAN.md
solomon_x_architecture - Copy (3)/solomon-x/solomon x/solomon_x_architecture - Copy (2)/: SOLOMON_X_ENHANCEMENT_REVIEW.md
solomon_x_architecture/solomon-x/: SOLOMON_OMNICORE_SPECIFICATION.md  requirements.txt  solomon.py
solomon_x_architecture/solomon-x/python/cognitive_twin/: tracker.py
solomon_x_architecture/solomon-x/python/memory/: search.py
solomon_x_architecture/solomon-x/solomon x/solomon_x_architecture/: solomon_x_architecture.code-workspace
solomon_x_architecture/solomon-x/solomon x/solomon_x_architecture - Copy (2)/: SOLOMON_X_ARCHITECTURE_GUIDE.md  current_vs_spec_analysis.md
solomon_x_architecture/solomon-x/trust/: policy_engine.py
solomon_x_architecture/solomon-x/ui/src/: main.ts
(+17 files in other folders)
